dist/1.0/bin/sample/retrieveUnpackaged/objects/Picklist__c.object
<CustomObject>
    <fields>
        <fullName>Level_1_Order__c</fullName>
        <label>Level 1 Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Order__c</fullName>
        <label>Level 2 Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Order__c</fullName>
        <label>Level 3 Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_cost_full_name__c</fullName>
        <label>Type of cost full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Level_1__c</columns>
        <columns>Level_1_Order__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_2_Order__c</columns>
        <columns>Level_3__c</columns>
        <columns>Level_3_Order__c</columns>
        <columns>Type_of_cost_full_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllMT</fullName>
        <columns>NAME</columns>
        <columns>Level_1__c</columns>
        <columns>Level_1_Order__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_2_Order__c</columns>
        <columns>Level_3__c</columns>
        <columns>Level_3_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Level_2__c</field>
            <operation>contains</operation>
            <value>CROF,crth</value>
        </filters>
        <label>AllMT</label>
    </listViews>
    <listViews>
        <fullName>ToC</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Level_1__c</columns>
        <columns>Level_1_Order__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_2_Order__c</columns>
        <columns>Level_3__c</columns>
        <columns>Level_3_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Type_Of_Cost</value>
        </filters>
        <filters>
            <field>Level_2__c</field>
            <operation>contains</operation>
            <value>mt</value>
        </filters>
        <label>ToC</label>
    </listViews>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>